<resources>
    <!-- App name and global strings -->
    <string name="app_name">Bitcoinwallet</string>

    <!-- Notifacation channel name-->
    <string name="notifacation_channel_name">BITCOIN_WALLET_CHANNEL</string>
    <string name="notifacation_channel_description">TRANSACTION_RECEIVED_CHANNEL</string>
    <string name="notifacation_received_id">TRANSACTION_NOTIFICATION</string>

    <!-- Text Views -->
    <string name="txt_no_wallet">No wallet found, would you like to either create or setup a wallet?</string>
    <string name="title_activity_create_wallet">CreateWalletActivity</string>
    <string name="txt_zero_percent">0%</string>
    <string name="txt_password_not_match">Entered passwords did not match, please try again</string>
    <string name="txt_downloading_blockchain_message">Currently creating your wallet and downloading the blockchain, this may take a while&#8230;</string>
    <string name="txt_recovering_wallet_message">Currently recovering your wallet and re-downloading the blockchain, this may take a while&#8230;</string>
    <string name="txt_recovery_seed_message">Below is the recovery seed of you wallet, write it down and keep it somewhere save in case you ever need to recover your wallet</string>
    <string name="txt_recovery_date_message">Below you will also find the date your seed which was created, writing it down is recommended as it can speed up recovery</string>
    <string name="txt_recover_wallet_message">To recover your wallet please enter your recovery seed below and the date and time it was created below</string>
    <string name="txt_creation_time_message">Input the creation time of your recovery seed\nDate (dd-mm-yy)\t Time (hh:mm:ss) </string>
    <string name="txt_balance">Balance</string>
    <string name="txt_zero_balance">₿0.00</string>
    <string name="txt_zero_balance_fiat">£0.00</string>
    <string name="txt_address">Address:</string>
    <string name="txt_address_no_colon">Address</string>
    <string name="txt_hour">Hour</string>
    <string name="txt_mins">Minutes</string>
    <string name="txt_secs">Seconds</string>
    <string name="txt_day">Day</string>
    <string name="txt_month">Month</string>
    <string name="txt_year">Year</string>
    <string name="txt_settings">SETTINGS</string>

    <!-- Buttons -->
    <string name="btn_home">home</string>
    <string name="btn_settings">settings</string>
    <string name="btn_one_day">1D</string>
    <string name="btn_one_week">1W</string>
    <string name="btn_one_month">1M</string>
    <string name="btn_six_months">6M</string>
    <string name="btn_create">Create</string>
    <string name="btn_recover">Recover</string>
    <string name="btn_send">Send</string>
    <string name="btn_ok">OK</string>
    <string name="btn_close">close</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_copy_address">Copy Address</string>
    <string name="btn_create_wallet">Create wallet</string>
    <string name="btn_set_password">Set Password</string>
    <string name="btn_recover_wallet">Recover Wallet</string>
    <string name="btn_written_recovery_seed">I have written down my recovery seed</string>
    <string name="btn_view_recovery_seed">View Recovery Seed</string>

    <!-- EditText Hints  -->
    <string name="hint_seed">Seed</string>
    <string name="hint_address">Address</string>
    <string name="hint_amount">Amount</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>


    <!-- Menu Items  -->
    <string name="menu_qr">Recieve</string>
</resources>
