<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/offWhite"
        android:textSize="18sp"
        android:text="@string/txt_settings"/>

    <View
        android:layout_width="86dp"
        android:layout_height="2dp"
        android:layout_margin="16dp"
        android:background="@color/offWhite"
        android:backgroundTint="@color/offWhite"/>

    <android.support.design.button.MaterialButton
        android:id="@+id/btn_settings_view_recovery_seed"
        style="@style/Bitcoinwallet.Button.TextButton"
        android:stateListAnimator="@null"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_view_recovery_seed"/>

    <android.support.design.button.MaterialButton
        style="@style/Bitcoinwallet.Button.TextButton"
        android:stateListAnimator="@null"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_set_password"/>
</merge>