<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:backgroundTint="@color/offWhite"
    android:padding="10dp"
    android:minWidth="400dp"
    android:background="@drawable/rounded_shape"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/txt_recovery_seed_message"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textViewRecoverySeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_shape"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="5dp"
        android:text=""
        android:textColor="@color/offWhite"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/txt_recovery_date_message"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textViewRecoverySeedBirthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_shape"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="5dp"
        android:text=""
        android:textColor="@color/offWhite"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="end">

        <android.support.design.button.MaterialButton
            android:id="@+id/closeBtn"
            style="@style/MyContainedButton"
            android:text="@string/btn_close" />
    </LinearLayout>
</LinearLayout>
