<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DisplayRecoverySeedActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="25dp"
        android:paddingRight="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txt_recovery_seed_message"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textViewRecoverySeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/desertSand"
            android:backgroundTint="@color/desertSand"
            android:gravity="center"
            android:padding="5dp"
            android:text=""
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txt_recovery_date_message"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textViewRecoverySeedBirthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/desertSand"
            android:backgroundTint="@color/desertSand"
            android:gravity="center"
            android:padding="5dp"
            android:text=""
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <android.support.design.button.MaterialButton
            android:id="@+id/confirmStoredSeedBtn"
            style="@style/MyContainedButton"
            android:text="@string/btn_written_recovery_seed" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>